# nbreak-econet

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
.github/workflows/: build.yml
contrib/libsigrokdecode/: README.md
fsroot/web/: index.html
main/: CMakeLists.txt  aun_bridge.c  aun_bridge.h  config.c  config.h  econet.c  econet.h  econet_rx.c  econet_tx.c  http.c  http.h  http_ws.c  idf_component.yml  logging.c  main.c  parlio_tx_econet.c  wifi.c
web/: mockserver.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs
web/src/: app.css
web/src/components/layout/: Sidebar.svelte
web/src/components/pages/: EconetClockPage.svelte  EconetPage.svelte  StatusPage.svelte
web/src/lib/: stores.ts  types.ts
